--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Four Card Feature Section" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Four Card Feature Section</title>
   </head>
@@ -18,47 +25,47 @@
       </p>
     </header>
     <main>
-      <ul class="main__cards">
-        <li class="card card--supervisor">
+      <ul class="main__cards" role="list">
+        <li class="card card--supervisor" role="listitem">
           <h3 class="card__title">Supervisor</h3>
           <p class="card__text">
             Monitors activity to identify project roadblocks
           </p>
           <img
-            src="assets/images/icon-supervisor.svg"
+            src="images/icon-supervisor.svg"
             alt="Magnifying glass with an eye in the middle"
             class="card__icon"
           />
         </li>
-        <li class="card card--team-builder">
+        <li class="card card--team-builder" role="listitem">
           <h3 class="card__title">Team Builder</h3>
           <p class="card__text">
             Scans our talent network to create the optimal team for your project
           </p>
           <img
-            src="assets/images/icon-team-builder.svg"
+            src="images/icon-team-builder.svg"
             alt="Red digital house"
             class="card__icon"
           />
         </li>
-        <li class="card card--karma">
+        <li class="card card--karma" role="listitem">
           <h3 class="card__title">Karma</h3>
           <p class="card__text">
             Regularly evaluates our talent to ensure quality
           </p>
           <img
-            src="assets/images/icon-karma.svg"
+            src="images/icon-karma.svg"
             alt="Light bulb turned on"
             class="card__icon"
           />
         </li>
-        <li class="card card--calculator">
+        <li class="card card--calculator" role="listitem">
           <h3 class="card__title">Calculator</h3>
           <p class="card__text">
             Uses data from past projects to provide better delivery estimates
           </p>
           <img
-            src="assets/images/icon-calculator.svg"
+            src="images/icon-calculator.svg"
             alt="Computer screen"
             class="card__icon"
           />
