Remove roles from list

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       </p>
     </header>
     <main>
-      <ul class="main__cards" role="list">
-        <li class="card card--supervisor" role="listitem">
+      <ul class="main__cards">
+        <li class="card card--supervisor">
           <h3 class="card__title">Supervisor</h3>
           <p class="card__text">
             Monitors activity to identify project roadblocks
@@ -36,7 +36,7 @@
             class="card__icon"
           />
         </li>
-        <li class="card card--team-builder" role="listitem">
+        <li class="card card--team-builder">
           <h3 class="card__title">Team Builder</h3>
           <p class="card__text">
             Scans our talent network to create the optimal team for your project
@@ -47,7 +47,7 @@
             class="card__icon"
           />
         </li>
-        <li class="card card--karma" role="listitem">
+        <li class="card card--karma">
           <h3 class="card__title">Karma</h3>
           <p class="card__text">
             Regularly evaluates our talent to ensure quality
@@ -58,7 +58,7 @@
             class="card__icon"
           />
         </li>
-        <li class="card card--calculator" role="listitem">
+        <li class="card card--calculator">
           <h3 class="card__title">Calculator</h3>
           <p class="card__text">
             Uses data from past projects to provide better delivery estimates
